--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,13 @@ workflows:
             branches:
               only:
                 - main
+      - deploy:
+        filters:
+          branches:
+            only:
+              -main
+        requires:
+          -build
 
 
 
@@ -32,4 +39,10 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
-    
+  deploy:
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - run:
+          name: deploy-application
+          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf devopsec-ca2/; git clone https://github.com/FabianGal45/devopsec-ca2.git; source devopsec-ca2/deploy.sh"
