--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,4 +46,4 @@ jobs:
     steps:
       - run:
           name: deploy-application
-          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf devopsec-ca2/; git clone https://github.com/FabianGal45/devopsec-ca2.git; source devopsec-ca2/deploy.sh"
+          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export SERVER=\"$SERVER\"; export PRIVATE_KEY=\"$PRIVATE_KEY"; rm -rf devopsec-ca2/; git clone https://github.com/FabianGal45/devopsec-ca2.git; source devopsec-ca2/deploy.sh"
